us-4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: us4-binlogdrrepl
spec:
  ingressClassName: nginx
  rules:
  - host: binlogdrrepl-0.kites.zoho.com
    http:
      paths:
      - backend:
          service:
            name: binlogdrrepl-0
            port:
              number: 8081
        path: /
        pathType: Prefix
  - host: binlogdrrepl-1.kites.zoho.com
    http:
      paths:
      - backend:
          service:
            name: binlogdrrepl-1
            port:
              number: 8081
        path: /
        pathType: Prefix
  - host: binlogdrrepl-2.kites.zoho.com
    http:
      paths:
      - backend:
          service:
            name: binlogdrrepl-2
            port:
              number: 8081
        path: /
        pathType: Prefix
